@@ -2,3 +2,8 @@
 
 	* imap.tcl: Updated to Gerhard Reithofer's re-implementation.
 	* imap.man: Added Gerhard Reithofer's package documentation.
+
+2010-07-09 Gerhard Reithofer <gerhard.rithofer@tech-edv.co.at>
+
+	* imap.tcl: Addining support for TLS/SSL, small cleanups.
+        * imap.man: Updated man pages for package version 0.2
